--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,7 @@
     <dimen name="activity_horizontal_margin">16dp</dimen>
     <dimen name="activity_vertical_margin">16dp</dimen>
     <dimen name="activity_top_margin">150dp</dimen>
+    <dimen name="text_small">10dp</dimen>
+    <dimen name="text_medium">25dp</dimen>
+    <dimen name="text_large">50dp</dimen>
 </resources>
