added imkage buttons

--- a/app/src/main/res/layout/activity_major.xml
+++ b/app/src/main/res/layout/activity_major.xml
@@ -2,10 +2,47 @@
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent">
-
+<LinearLayout
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content"
+    android:orientation="horizontal">
 <ImageButton
     android:layout_width="wrap_content"
     android:layout_height="wrap_content"
     android:background="null"
     android:src="@drawable/amajorbtn"/>
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:background="null"
+        android:src="@drawable/bmajorbtn"/>
+    <ImageButton
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="null"
+        android:src="@drawable/cmajorbtn"/>
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="null"
+            android:src="@drawable/dmajorbtn"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="null"
+            android:src="@drawable/emajorbtn"/>
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:background="null"
+            android:src="@drawable/fmajorbtn"/>
+        </LinearLayout>
 </LinearLayout>
