--- a/app/src/main/res/layout/activity_a7min.xml
+++ b/app/src/main/res/layout/activity_a7min.xml
@@ -3,5 +3,10 @@
     android:orientation="vertical" android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/aminor7tab">
+    <Button
+        android:id="@+id/a7mPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/sound_btn_space"
+        android:text="@string/listen_btn"/>
 
 </LinearLayout>
