--- a/app/src/main/res/layout/activity_dmin.xml
+++ b/app/src/main/res/layout/activity_dmin.xml
@@ -4,4 +4,9 @@
     android:layout_height="match_parent"
     android:background="@drawable/dminortab">
 
+    <Button
+        android:id="@+id/dmPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/sound_btn_space"
+        android:text="@string/listen_btn"/>
 </LinearLayout>
