--- a/app/src/main/res/layout/activity_emin.xml
+++ b/app/src/main/res/layout/activity_emin.xml
@@ -4,4 +4,10 @@
     android:layout_height="match_parent"
     android:background="@drawable/eminortab">
 
+    <Button
+        android:id="@+id/emPlay"
+        android:layout_width="wrap_content"
+        android:layout_height="@dimen/sound_btn_space"
+        android:text="@string/listen_btn"/>
+
 </LinearLayout>
